# eHIJING-pythia

./: .gitignore  Makefile  Makefile.inc  Untitled.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
cpp_interface/: READMe.txt  RunAllSystems  eHIJING.cpp  eHIJING.h  main.cpp  run
eHIJING-examples/: CMakeLists.txt  SingleParton.cpp  clas.cpp  eic.cpp  eicc.py  emc.cpp  ep-st.cpp  ep.cpp  hermes.cpp  jlab.cpp  mainplots.py  nersc.py  plot_pTbroadening.py  pythia-ep-settings.txt  talk_plot.py
eHIJING-examples/Work/: Untitled.ipynb
eHIJING-examples/Work/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
eHIJING_Interface/: eHIJING-bk.cpp  eHIJING.cpp  eHIJING.h  example  main.cpp
examples/: Makefile.inc  main21.cc
include/Pythia8/: Event.h  PartonLevel.h  TimeShower.h
include/eHIJING/: eHIJING.h
share/Pythia8/xmldoc/: Index.xml  eHIJING.xml
src/: Event.cc  PartonLevel.cc  Pythia.cc  Settings.cc  TimeShower.cc  eHIJING.cc  hcubature.cc
tmp/: Analysis.d  Basics.d  BeamParticle.d  BeamRemnants.d  BeamShape.d  BoseEinstein.d  ColourReconnection.d  ColourTracing.d  Event.d  FJcore.d  FragmentationFlavZpT.d  FragmentationSystems.d  GammaKinematics.d  HIUserHooks.d  HadronLevel.d  HadronScatter.d  HardDiffraction.d  HeavyIons.d  HelicityBasics.d  HelicityMatrixElements.d  HiddenValleyFragmentation.d  History.d  Info.d  JunctionSplitting.d  LHEF3.d  LesHouches.d  Merging.d  MergingHooks.d  MiniStringFragmentation.d  MultipartonInteractions.d  ParticleData.d  ParticleDecays.d  PartonDistributions.d  PartonLevel.d  PartonSystems.d  PartonVertex.d  PhaseSpace.d  ProcessContainer.d  ProcessLevel.d  Pythia.d  (+35 more)
